--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,28 +3,38 @@
 {
     "name": "Existing Dockerfile",
 
-    // Sets the run context to one level up instead of the .devcontainer folder.
-    "context": "..",
-
-    // Update the 'dockerFile' property if you aren't using the standard 'Dockerfile' filename.
-    "dockerFile": "../Dockerfile",
-
-    // Set *default* container specific settings.json values on container create.
-    "settings": {
-        "python.linting.flake8Enabled": true,
-        "git.ignoreLimitWarning": true
+    "build": {
+        // Sets the run context to one level up instead of the .devcontainer folder.
+        "context": "..",
+        // Update the 'dockerFile' property if you aren't using the standard 'Dockerfile' filename.
+        "dockerfile": "../Dockerfile",
+        "options": [
+            "--progress=plain"
+        ]
     },
 
-    // Add the IDs of extensions you want installed when the container is created.
-    "extensions": [
-        "ms-python.python",
-        "formulahendry.code-runner",
-        "oderwat.indent-rainbow",
-        "aaron-bond.better-comments",
-        "shardulm94.trailing-spaces",
-        "mosapride.zenkaku",
-        "mhutchie.git-graph",
-    ],
+    "runArgs": ["--gpus", "all"],
+
+    // Set *default* container specific settings.json values on container create.
+    "customizations": {
+        "vscode": {
+            "settings": {
+                "git.ignoreLimitWarning": true
+            },
+            // Add the IDs of extensions you want installed when the container is created.
+            "extensions": [
+                "ms-python.python",
+                "ms-toolsai.jupyter",
+                "charliermarsh.ruff",
+                "ms-python.mypy-type-checker",
+                "mhutchie.git-graph",
+                "aaron-bond.better-comments",
+                "oderwat.indent-rainbow",
+                "shardulm94.trailing-spaces",
+                "mosapride.zenkaku"
+            ]
+        }
+    },
 
     // Use 'forwardPorts' to make a list of ports inside the container available locally.
     // "forwardPorts": [],
@@ -39,8 +49,11 @@
     // "mounts": [ "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind" ],
 
     // Uncomment to connect as a non-root user if you've added one. See https://aka.ms/vscode-remote/containers/non-root.
-    "remoteUser": "aiskay",
+    "remoteUser": "aisky",
+    "containerUser": "aisky",
+    // to mount
+    "updateRemoteUserUID": true,
 
-    "workspaceMount": "source=${localWorkspaceFolder}/competitions,target=/home/aiskay/competitions,type=bind",
-    "workspaceFolder": "/home/aiskay",
+    "workspaceMount": "source=${localWorkspaceFolder}/competitions,target=/home/aisky/competitions,type=bind",
+    "workspaceFolder": "/home/aisky"
 }
